--- a/student-interest/src/components/Form/basicformstyle.css
+++ b/student-interest/src/components/Form/basicformstyle.css
@@ -1,10 +1,14 @@
 .interestedForm{
-    /* display:flex; 
-    flex-direction: column; */
+    display:flex; 
+    flex-direction: column;
+    /* gap: 1em; */
 }
 
 .interestedForm input{
     width:300px;
-    height:60px;
+    height:20px;
     margin:10px;
+}
+.commentBox{
+    margin-right: 20rem;
 }
