--- a/student-interest/src/components/navBar/style.css
+++ b/student-interest/src/components/navBar/style.css
@@ -26,7 +26,6 @@
     /* Move button up 4px on hover */
     transform: translateY(-4px);
   }
-
-  h1{
-    cursor: pointer;
-  }
+ .nonParielText{
+  cursor: pointer;
+ }
